2013-01-15         Arnold D. Robbins     <arnold@skeeve.com>

	* inplace.3am: New file.
	* filefuncs.3am, fnmatch.3am, fork.3am, ordchr.3am, readdir.3am,
	readfile.3am, revoutput.3am, revtwoway.3am, rwarray.3am,
	time.3am: Update copyright dates, add reference to inplace(3am).

	* inplace.c (do_inplace_begin): Remove unused variable `p'.

2013-01-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* inplace.c (do_inplace_begin): No need to get the 2nd suffix argument,
	since it is not currently used in this function.

2013-01-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* inplace.c: New extension to implement in-place editing.
	* Makefile.am: Add inplace extension.

2012-12-25         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.3am, fnmatch.3am: Predefined variables are no
	longer constants.
	* filefuncs.c (init_filefuncs): Use sym_update() instead of
	sym_constant().
	* fnmatch.c (init_fnmatch): Ditto.
	* testext.c (init_testext): Ditto.

2012-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.2: Release tar ball made.

2012-12-19         Arnold D. Robbins     <arnold@skeeve.com>

	* testext.c (test_indirect_vars): New test and awk code.

2012-12-02         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add README.fts.

2012-11-30         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c readdir.c, revoutput.c, revtwoway.c, rwarray.c,
	rwarray0.c, testext.c: Use awk_true and awk_false instead of 1 and 0.

2012-11-26         Arnold D. Robbins     <arnold@skeeve.com>

	* bindarr.c, fileop.c, sparr.c: Make them compile.
	* steps: Reinstated and updated.
	* testsparr.awk: Add call to extension().

2011-05-03         John Haque     <j.eh@mchsi.com>

	* fileop.c, record.awk, testrecord.sh: New files.
	* steps: Updated.

2011-05-02         John Haque     <j.eh@mchsi.com>

	* bindarr.c, dbarray.awk, testdbarray.awk: New files.
	* steps: Updated.
