@@ -104,6 +104,7 @@ do_readfile(int nargs, awk_value_t *result)
 		if ((ret = read(fd, text, sbuf.st_size)) != sbuf.st_size) {
 			(void) close(fd);
 			update_ERRNO_int(errno);
+			free(text);
 			goto done;
 		}
 
